--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Creepster|Meddon" rel="stylesheet">
-    <audio src="src/theme.mp3" autoplay="true"></audio>
+    <audio src="<%= htmlWebpackPlugin.files.mp3 %>" autoplay="true"></audio>
     <title>Addams Memory</title>
   </head>
   <body>
